tooling/nargo_cli/tests/snapshots/compile_failure/assert_constant_fail/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Argument is not constant
  ┌─ src/main.nr:9:5
  │
9 │     assert_constant(non_constant);
  │     -----------------------------
  │
  = Call stack:
    1: main
            at src/main.nr:4:5
    2: foo
            at src/main.nr:9:5

Aborting due to 1 previous error
